# lakekeeper-clients

./: .gitignore  PLAN.md  PUBLISHING.md  README.md
.github/workflows/: java-ci.yml  python-ci.yml  release.yml
java/: .env.local.example  CHANGELOG.md  build.gradle.kts  gradle.properties  settings.gradle.kts
java/core/: build.gradle.kts
java/core/src/main/java/io/lakekeeper/client/: GenericTableFormat.java  GenericTables.java  HttpTransport.java  LakekeeperClient.java  NamespaceEncoder.java
java/core/src/main/java/io/lakekeeper/client/auth/: Auth.java  AuthorizationCodeFlow.java  ClientCredentials.java  DeviceCodeFlow.java  DeviceCodePrompt.java  RefreshableAuth.java  StaticToken.java
java/core/src/main/java/io/lakekeeper/client/exception/: AuthException.java  ConfigException.java  ConflictException.java  LakekeeperException.java  LakekeeperHttpException.java  NotFoundException.java
java/core/src/main/java/io/lakekeeper/client/model/: GenericTableData.java  GenericTableIdentifier.java  ListGenericTablesResponse.java  LoadGenericTableResponse.java  StorageCredential.java
java/core/src/test/java/io/lakekeeper/client/: AuthorizationCodeFlowTest.java  ClientCredentialsTest.java  DeviceCodeFlowTest.java  GenericTablesTest.java  NamespaceEncoderTest.java  StaticTokenTest.java
java/examples/flink/: README.md  build.gradle.kts
java/examples/flink/src/main/java/io/lakekeeper/example/flink/: IotStreamJob.java  JsonArrayBulkWriter.java  SensorBatchSource.java  SensorReading.java
java/spark/: build.gradle.kts
java/spark/src/main/java/io/lakekeeper/spark/: LakekeeperSpark.java
java/spark/src/test/java/io/lakekeeper/spark/: LakekeeperSparkTest.java
python/: CHANGELOG.md  TEST_REPORT.md  pyproject.toml
python/examples/: .env.example  README.md  _demo.py  auth_authcode_vortex.ipynb  auth_clientcredentials_delta.ipynb  auth_devicecode_hdf5.ipynb  auth_devicecode_lance.ipynb  dataset_images.py  generic_tables_lance.py  run.sh  spark_lance_write.ipynb
python/src/pylakekeeper/: __init__.py  auth.py  client.py  errors.py  formats.py  generic_tables.py  lance.py  models.py  transport.py  url.py
python/tests/: test_auth.py  test_device_authcode.py  test_formats.py  test_generic_tables.py  test_url.py
python/tests/integration/: README.md  conftest.py  docker-compose.yaml  test_roundtrip.py  test_token_refresh.py
release-please/: .release-please-manifest.json  release-please-config.json
