[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution and import name are both `pylakekeeper` (the bare `lakekeeper` name on PyPI
# belongs to an unrelated project). pip install pylakekeeper -> import pylakekeeper.
name = "pylakekeeper"
version = "0.2.0"
description = "Official Lakekeeper client — generic-tables API and OAuth2 auth (static token / client_credentials with refresh)"
readme = "../README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Lakekeeper" }]
keywords = ["lakekeeper", "iceberg", "lance", "catalog", "rest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    # Standalone client: only generic-tables + auth. No pyiceberg — client_credentials
    # refresh is hand-rolled (the scope doesn't touch the Iceberg REST surface).
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
lance = ["pylance>=0.16"]
# Optional Iceberg-catalog helper, if a user wants the standard Iceberg surface too.
iceberg = ["pyiceberg>=0.10.0"]
# Everything the example scripts + notebooks need to round-trip real data.
examples = [
    "jupyterlab>=4",
    "ipykernel>=6,<7",  # 7.x emits a curve-encryption kernelspec many frontends can't attach to
    "pylance>=0.16",
    "pyarrow>=15",
    "numpy>=1.24",
    "deltalake>=0.18",  # auth_clientcredentials_delta.ipynb
    "vortex-data>=0.20",  # auth_authcode_vortex.ipynb
    "boto3>=1.34",  # dataset-format uploads (images, HDF5)
    "h5py>=3.10",  # auth_devicecode_hdf5.ipynb
]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    # Integration tests (pytest -m integration): drive a real lance roundtrip via docker compose.
    "pylance>=0.16",
    "pyarrow>=15",
    # examples/dataset_images.py uploads to S3 with boto3.
    "boto3>=1.34",
]

[project.urls]
Homepage = "https://github.com/lakekeeper/lakekeeper-clients"
Repository = "https://github.com/lakekeeper/lakekeeper-clients"

[tool.hatch.build.targets.wheel]
packages = ["src/pylakekeeper"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Integration tests need Docker; deselect by default. Run them with `pytest -m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end tests requiring Docker (Lakekeeper + Keycloak + MinIO)",
]
